@@ -191,8 +191,6 @@ private:
 		for(it=_outputs.begin(); it!=_outputs.end(); it++)
 			delete *it;
 		_outputs.clear();
-		// Delete ports from Processing (base class) register
-		GetOutPorts().Clear();
 	}
 	
 
